Update Xieron project: Remove marketplace content, make it team-focused

--- a/index.html
+++ b/index.html
@@ -220,14 +220,14 @@
                     <h3><span class="icon"><svg viewBox="0 0 24 24">
                                 <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
                                 <polyline points="9 22 9 12 15 12 15 22"></polyline>
-                            </svg></span>Xieron Marketplace</h3>
-                    <p>Modern e-commerce platform with advanced filtering, real-time inventory management, and seamless
-                        checkout experience. Handles 10K+ daily transactions.</p>
+                            </svg></span>Xieron</h3>
+                    <p>A professional gaming and development team focused on creating innovative digital experiences and
+                        building a strong community of creators and players.</p>
                     <div class="project-tags">
-                        <span class="tag">Next.js</span>
-                        <span class="tag">Stripe</span>
-                        <span class="tag">MongoDB</span>
-                        <span class="tag">Redis</span>
+                        <span class="tag">Team Project</span>
+                        <span class="tag">Community</span>
+                        <span class="tag">Gaming</span>
+                        <span class="tag">Development</span>
                     </div>
                     <div class="project-links">
                         <a href="projects/marketplace.html" class="project-link" id="project2-demo">
