Fix Xieron description: Discord bot with admin role

--- a/index.html
+++ b/index.html
@@ -221,13 +221,14 @@
                                 <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
                                 <polyline points="9 22 9 12 15 12 15 22"></polyline>
                             </svg></span>Xieron</h3>
-                    <p>A professional gaming and development team focused on creating innovative digital experiences and
-                        building a strong community of creators and players.</p>
+                    <p>A powerful Discord bot project where I serve as admin, managing and developing features to
+                        enhance
+                        server functionality and community engagement.</p>
                     <div class="project-tags">
-                        <span class="tag">Team Project</span>
+                        <span class="tag">Discord Bot</span>
+                        <span class="tag">Admin</span>
                         <span class="tag">Community</span>
-                        <span class="tag">Gaming</span>
-                        <span class="tag">Development</span>
+                        <span class="tag">Management</span>
                     </div>
                     <div class="project-links">
                         <a href="projects/marketplace.html" class="project-link" id="project2-demo">
