Enhanced project cards with custom backgrounds and updated cursor to white shadow

--- a/index.html
+++ b/index.html
@@ -203,10 +203,8 @@
             </article>
 
             <article class="project-card">
-                <div class="project-image project-img-2"
-                    style="display: flex; align-items: center; justify-content: center; background: linear-gradient(135deg, #0a0a0a 0%, #000000 100%);">
-                    <img src="xieron-logo.png" alt="Xieron"
-                        style="width: 200px; height: 200px; object-fit: contain; filter: drop-shadow(0 0 30px rgba(255, 0, 0, 0.8)) drop-shadow(0 0 60px rgba(255, 0, 0, 0.5));">
+                <div class="project-image project-img-2">
+                    <img src="xieron-logo.png" alt="Xieron" class="xieron-logo">
                     <div class="project-overlay">
                         <span class="project-category"><span class="icon icon-sm"><svg viewBox="0 0 24 24">
                                     <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
