Updated location from San Francisco to Uttar Pradesh, India

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <span class="icon"><svg viewBox="0 0 24 24">
                             <path d="M5 12h14"></path>
                             <path d="M12 5l7 7-7 7"></path>
-                        </svg></span>I'm a full-stack developer based in San Francisco, passionate about creating
+                        </svg></span>I'm a full-stack developer based in Uttar Pradesh, India, passionate about creating
                     web applications that make a difference. My journey started with a curiosity
                     about how things work on the internet, and it's evolved into a career building
                     products used by thousands of people daily.
@@ -428,7 +428,7 @@
                         <p><span class="icon icon-sm"><svg viewBox="0 0 24 24">
                                     <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
                                     <circle cx="12" cy="10" r="3"></circle>
-                                </svg></span>San Francisco, CA</p>
+                                </svg></span>Uttar Pradesh, India</p>
                     </div>
                 </div>
             </div>
