--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                     </div>
                     <div>
                         <h4>Email</h4>
-                        <a href="mailto:farru@example.com">farru@example.com</a>
+                        <a href="mailto:notfarruxd@gmail.com">notfarruxd@gmail.com</a>
                     </div>
                 </div>
                 <div class="contact-item">
