Updated third card to Discord Bot Development with discord.js and discord.py

--- a/index.html
+++ b/index.html
@@ -226,22 +226,23 @@
                 <div class="project-image project-img-3">
                     <div class="project-overlay">
                         <span class="project-category"><span class="icon icon-sm"><svg viewBox="0 0 24 24">
-                                    <rect x="5" y="2" width="14" height="20" rx="2" ry="2"></rect>
-                                    <line x1="12" y1="18" x2="12.01" y2="18"></line>
-                                </svg></span>Mobile App</span>
+                                    <rect x="2" y="3" width="20" height="14" rx="2" ry="2"></rect>
+                                    <line x1="8" y1="21" x2="16" y2="21"></line>
+                                    <line x1="12" y1="17" x2="12" y2="21"></line>
+                                </svg></span>Bot Development</span>
                     </div>
                 </div>
                 <div class="project-content">
                     <h3><span class="icon"><svg viewBox="0 0 24 24">
-                                <polyline points="9 11 12 14 22 4"></polyline>
-                                <path d="M21 12v7a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11"></path>
-                            </svg></span>TaskFlow Collaboration</h3>
-                    <p>Cross-platform productivity app with real-time collaboration, drag-and-drop task management, and
-                        team analytics. Used by 5,000+ teams worldwide.</p>
+                                <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path>
+                            </svg></span>Discord Bot Development</h3>
+                    <p>Specialized in creating powerful Discord bots using discord.js and discord.py. Building custom
+                        commands, moderation systems, and interactive features for Discord communities.</p>
                     <div class="project-tags">
-                        <span class="tag">React Native</span>
-                        <span class="tag">Firebase</span>
-                        <span class="tag">TypeScript</span>
+                        <span class="tag">Discord.js</span>
+                        <span class="tag">Discord.py</span>
+                        <span class="tag">Node.js</span>
+                        <span class="tag">Python</span>
                     </div>
                 </div>
             </article>
