Updated first card to Data Analytics Editor with professional workspace background

--- a/index.html
+++ b/index.html
@@ -168,12 +168,10 @@
                 <div class="project-image project-img-1">
                     <div class="project-overlay">
                         <span class="project-category"><span class="icon icon-sm"><svg viewBox="0 0 24 24">
-                                    <circle cx="12" cy="12" r="10"></circle>
-                                    <line x1="2" y1="12" x2="22" y2="12"></line>
-                                    <path
-                                        d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z">
-                                    </path>
-                                </svg></span>Web Application</span>
+                                    <rect x="2" y="3" width="20" height="14" rx="2" ry="2"></rect>
+                                    <line x1="8" y1="21" x2="16" y2="21"></line>
+                                    <line x1="12" y1="17" x2="12" y2="21"></line>
+                                </svg></span>Data Analytics</span>
                     </div>
                 </div>
                 <div class="project-content">
@@ -181,14 +179,14 @@
                                 <line x1="18" y1="20" x2="18" y2="10"></line>
                                 <line x1="12" y1="20" x2="12" y2="4"></line>
                                 <line x1="6" y1="20" x2="6" y2="14"></line>
-                            </svg></span>DataViz Analytics Platform</h3>
-                    <p>A comprehensive analytics dashboard for SaaS companies to track KPIs, user behavior, and revenue
-                        metrics in real-time. Built with React, D3.js, and Node.js.</p>
+                            </svg></span>Data Analytics Editor</h3>
+                    <p>Professional data analysis and visualization using industry-standard tools. Creating insightful
+                        dashboards, reports, and data-driven solutions with Excel, Tableau, Python, and SQL.</p>
                     <div class="project-tags">
-                        <span class="tag">React</span>
-                        <span class="tag">Node.js</span>
-                        <span class="tag">PostgreSQL</span>
-                        <span class="tag">D3.js</span>
+                        <span class="tag">Excel</span>
+                        <span class="tag">Tableau</span>
+                        <span class="tag">Python</span>
+                        <span class="tag">SQL</span>
                     </div>
                 </div>
             </article>
