Fixed: Changed to Video/Photo Editor with creative editing workspace background

--- a/index.html
+++ b/index.html
@@ -168,25 +168,30 @@
                 <div class="project-image project-img-1">
                     <div class="project-overlay">
                         <span class="project-category"><span class="icon icon-sm"><svg viewBox="0 0 24 24">
-                                    <rect x="2" y="3" width="20" height="14" rx="2" ry="2"></rect>
-                                    <line x1="8" y1="21" x2="16" y2="21"></line>
-                                    <line x1="12" y1="17" x2="12" y2="21"></line>
-                                </svg></span>Data Analytics</span>
+                                    <rect x="2" y="2" width="20" height="20" rx="2.18" ry="2.18"></rect>
+                                    <line x1="7" y1="2" x2="7" y2="22"></line>
+                                    <line x1="17" y1="2" x2="17" y2="22"></line>
+                                    <line x1="2" y1="12" x2="22" y2="12"></line>
+                                    <line x1="2" y1="7" x2="7" y2="7"></line>
+                                    <line x1="2" y1="17" x2="7" y2="17"></line>
+                                    <line x1="17" y1="17" x2="22" y2="17"></line>
+                                    <line x1="17" y1="7" x2="22" y2="7"></line>
+                                </svg></span>Creative Editing</span>
                     </div>
                 </div>
                 <div class="project-content">
                     <h3><span class="icon"><svg viewBox="0 0 24 24">
-                                <line x1="18" y1="20" x2="18" y2="10"></line>
-                                <line x1="12" y1="20" x2="12" y2="4"></line>
-                                <line x1="6" y1="20" x2="6" y2="14"></line>
-                            </svg></span>Data Analytics Editor</h3>
-                    <p>Professional data analysis and visualization using industry-standard tools. Creating insightful
-                        dashboards, reports, and data-driven solutions with Excel, Tableau, Python, and SQL.</p>
+                                <polygon points="23 7 16 12 23 17 23 7"></polygon>
+                                <rect x="1" y="5" width="15" height="14" rx="2" ry="2"></rect>
+                            </svg></span>Video / Photo Editor</h3>
+                    <p>Professional video editing and photo manipulation using industry-standard creative software.
+                        Creating stunning visuals, cinematic videos, and polished content with Adobe Premiere, After
+                        Effects, Photoshop, and DaVinci Resolve.</p>
                     <div class="project-tags">
-                        <span class="tag">Excel</span>
-                        <span class="tag">Tableau</span>
-                        <span class="tag">Python</span>
-                        <span class="tag">SQL</span>
+                        <span class="tag">Premiere Pro</span>
+                        <span class="tag">After Effects</span>
+                        <span class="tag">Photoshop</span>
+                        <span class="tag">DaVinci</span>
                     </div>
                 </div>
             </article>
