Added Formspree email integration to contact form

--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
             <p class="section-subtitle">Have a project in mind? Let's talk</p>
         </div>
         <div class="contact-content">
-            <form class="contact-form" id="contactForm">
+            <form class="contact-form" id="contactForm" action="https://formspree.io/f/xovqvgdg" method="POST">
                 <div class="form-row">
                     <div class="form-group">
                         <label for="name"><span class="icon icon-sm"><svg viewBox="0 0 24 24">
