Added white flower animations to left and right sidebars

--- a/index.html
+++ b/index.html
@@ -18,6 +18,22 @@
 </head>
 
 <body>
+    <!-- Flower Sidebars -->
+    <div class="flower-sidebar left">
+        <div class="flower-vibe"></div>
+        <div class="flower-vibe"></div>
+        <div class="flower-vibe"></div>
+        <div class="flower-vibe"></div>
+        <div class="flower-vibe"></div>
+    </div>
+    <div class="flower-sidebar right">
+        <div class="flower-vibe"></div>
+        <div class="flower-vibe"></div>
+        <div class="flower-vibe"></div>
+        <div class="flower-vibe"></div>
+        <div class="flower-vibe"></div>
+    </div>
+
     <!-- Navigation -->
     <nav id="navbar">
         <div class="nav-container">
