Replaced with hanging vine flowers matching reference image

--- a/index.html
+++ b/index.html
@@ -20,18 +20,54 @@
 <body>
     <!-- Flower Sidebars -->
     <div class="flower-sidebar left">
-        <div class="flower-vibe"></div>
-        <div class="flower-vibe"></div>
-        <div class="flower-vibe"></div>
-        <div class="flower-vibe"></div>
-        <div class="flower-vibe"></div>
+        <svg class="hanging-vine" viewBox="0 0 100 400" xmlns="http://www.w3.org/2000/svg">
+            <path d="M50,0 Q45,50 50,100 Q55,150 50,200 Q45,250 50,300 Q55,350 50,400" stroke="white" stroke-width="1.5"
+                fill="none" opacity="0.4" />
+            <circle cx="50" cy="80" r="8" fill="none" stroke="white" stroke-width="1.5" opacity="0.7" />
+            <circle cx="50" cy="80" r="4" fill="white" opacity="0.3" />
+            <ellipse cx="35" cy="75" rx="6" ry="10" fill="white" opacity="0.5" />
+            <ellipse cx="65" cy="75" rx="6" ry="10" fill="white" opacity="0.5" />
+
+            <circle cx="50" cy="160" r="8" fill="none" stroke="white" stroke-width="1.5" opacity="0.7" />
+            <circle cx="50" cy="160" r="4" fill="white" opacity="0.3" />
+            <ellipse cx="35" cy="155" rx="6" ry="10" fill="white" opacity="0.5" />
+            <ellipse cx="65" cy="155" rx="6" ry="10" fill="white" opacity="0.5" />
+
+            <circle cx="50" cy="240" r="8" fill="none" stroke="white" stroke-width="1.5" opacity="0.7" />
+            <circle cx="50" cy="240" r="4" fill="white" opacity="0.3" />
+            <ellipse cx="35" cy="235" rx="6" ry="10" fill="white" opacity="0.5" />
+            <ellipse cx="65" cy="235" rx="6" ry="10" fill="white" opacity="0.5" />
+
+            <circle cx="50" cy="320" r="8" fill="none" stroke="white" stroke-width="1.5" opacity="0.7" />
+            <circle cx="50" cy="320" r="4" fill="white" opacity="0.3" />
+            <ellipse cx="35" cy="315" rx="6" ry="10" fill="white" opacity="0.5" />
+            <ellipse cx="65" cy="315" rx="6" ry="10" fill="white" opacity="0.5" />
+        </svg>
     </div>
     <div class="flower-sidebar right">
-        <div class="flower-vibe"></div>
-        <div class="flower-vibe"></div>
-        <div class="flower-vibe"></div>
-        <div class="flower-vibe"></div>
-        <div class="flower-vibe"></div>
+        <svg class="hanging-vine" viewBox="0 0 100 400" xmlns="http://www.w3.org/2000/svg">
+            <path d="M50,0 Q55,50 50,100 Q45,150 50,200 Q55,250 50,300 Q45,350 50,400" stroke="white" stroke-width="1.5"
+                fill="none" opacity="0.4" />
+            <circle cx="50" cy="80" r="8" fill="none" stroke="white" stroke-width="1.5" opacity="0.7" />
+            <circle cx="50" cy="80" r="4" fill="white" opacity="0.3" />
+            <ellipse cx="35" cy="75" rx="6" ry="10" fill="white" opacity="0.5" />
+            <ellipse cx="65" cy="75" rx="6" ry="10" fill="white" opacity="0.5" />
+
+            <circle cx="50" cy="160" r="8" fill="none" stroke="white" stroke-width="1.5" opacity="0.7" />
+            <circle cx="50" cy="160" r="4" fill="white" opacity="0.3" />
+            <ellipse cx="35" cy="155" rx="6" ry="10" fill="white" opacity="0.5" />
+            <ellipse cx="65" cy="155" rx="6" ry="10" fill="white" opacity="0.5" />
+
+            <circle cx="50" cy="240" r="8" fill="none" stroke="white" stroke-width="1.5" opacity="0.7" />
+            <circle cx="50" cy="240" r="4" fill="white" opacity="0.3" />
+            <ellipse cx="35" cy="235" rx="6" ry="10" fill="white" opacity="0.5" />
+            <ellipse cx="65" cy="235" rx="6" ry="10" fill="white" opacity="0.5" />
+
+            <circle cx="50" cy="320" r="8" fill="none" stroke="white" stroke-width="1.5" opacity="0.7" />
+            <circle cx="50" cy="320" r="4" fill="white" opacity="0.3" />
+            <ellipse cx="35" cy="315" rx="6" ry="10" fill="white" opacity="0.5" />
+            <ellipse cx="65" cy="315" rx="6" ry="10" fill="white" opacity="0.5" />
+        </svg>
     </div>
 
     <!-- Navigation -->
