--- a/index.html
+++ b/index.html
@@ -57,66 +57,64 @@
             <ellipse cx="50" cy="420" rx="8" ry="14" fill="white" opacity="0.6" transform="rotate(-30 50 420)" />
         </svg>
     </div>
+    <!-- Navigation -->
+    <svg class="hanging-vine" viewBox="0 0 120 500" xmlns="http://www.w3.org/2000/svg">
+        <!-- Curved vine stem -->
+        <path d="M60,0 Q50,40 55,80 Q60,120 50,160 Q40,200 50,240 Q60,280 55,320 Q50,360 55,400 Q60,440 60,500"
+            stroke="white" stroke-width="2" fill="none" opacity="0.5" />
 
+        <!-- Dark filled leaves alternating -->
+        <ellipse cx="40" cy="60" rx="8" ry="14" fill="white" opacity="0.7" transform="rotate(-30 40 60)" />
+        <ellipse cx="70" cy="100" rx="8" ry="14" fill="white" opacity="0.7" transform="rotate(30 70 100)" />
+        <ellipse cx="35" cy="140" rx="8" ry="14" fill="white" opacity="0.7" transform="rotate(-30 35 140)" />
+        <ellipse cx="65" cy="180" rx="8" ry="14" fill="white" opacity="0.7" transform="rotate(30 65 180)" />
+        <ellipse cx="40" cy="220" rx="8" ry="14" fill="white" opacity="0.7" transform="rotate(-30 40 220)" />
+        <ellipse cx="70" cy="260" rx="8" ry="14" fill="white" opacity="0.7" transform="rotate(30 70 260)" />
+        <ellipse cx="35" cy="300" rx="8" ry="14" fill="white" opacity="0.7" transform="rotate(-30 35 300)" />
+        <ellipse cx="65" cy="340" rx="8" ry="14" fill="white" opacity="0.7" transform="rotate(30 65 340)" />
 
-    <div class="flower-sidebar left">
-        <svg class="hanging-vine" viewBox="0 0 120 500" xmlns="http://www.w3.org/2000/svg">
-            <!-- Curved vine stem -->
-            <path d="M60,0 Q50,40 55,80 Q60,120 50,160 Q40,200 50,240 Q60,280 55,320 Q50,360 55,400 Q60,440 60,500"
-                stroke="white" stroke-width="2" fill="none" opacity="0.5" />
-
-            <!-- Dark filled leaves alternating -->
-            <ellipse cx="40" cy="60" rx="8" ry="14" fill="white" opacity="0.7" transform="rotate(-30 40 60)" />
-            <ellipse cx="70" cy="100" rx="8" ry="14" fill="white" opacity="0.7" transform="rotate(30 70 100)" />
-            <ellipse cx="35" cy="140" rx="8" ry="14" fill="white" opacity="0.7" transform="rotate(-30 35 140)" />
-            <ellipse cx="65" cy="180" rx="8" ry="14" fill="white" opacity="0.7" transform="rotate(30 65 180)" />
-            <ellipse cx="40" cy="220" rx="8" ry="14" fill="white" opacity="0.7" transform="rotate(-30 40 220)" />
-            <ellipse cx="70" cy="260" rx="8" ry="14" fill="white" opacity="0.7" transform="rotate(30 70 260)" />
-            <ellipse cx="35" cy="300" rx="8" ry="14" fill="white" opacity="0.7" transform="rotate(-30 35 300)" />
-            <ellipse cx="65" cy="340" rx="8" ry="14" fill="white" opacity="0.7" transform="rotate(30 65 340)" />
-
-            <!-- 5-Petal Flowers -->
-            <g transform="translate(55, 80)">
-                <circle cx="0" cy="-8" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
-                <circle cx="6" cy="-2" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
-                <circle cx="4" cy="6" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
-                <circle cx="-4" cy="6" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
-                <circle cx="-6" cy="-2" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
-                <circle cx="0" cy="0" r="2" fill="white" opacity="0.4" />
-            </g>
-            <g transform="translate(50, 160)">
-                <circle cx="0" cy="-8" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
-                <circle cx="6" cy="-2" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
-                <circle cx="4" cy="6" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
-                <circle cx="-4" cy="6" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
-                <circle cx="-6" cy="-2" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
-                <circle cx="0" cy="0" r="2" fill="white" opacity="0.4" />
-            </g>
-            <g transform="translate(55, 240)">
-                <circle cx="0" cy="-8" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
-                <circle cx="6" cy="-2" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
-                <circle cx="4" cy="6" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
-                <circle cx="-4" cy="6" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
-                <circle cx="-6" cy="-2" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
-                <circle cx="0" cy="0" r="2" fill="white" opacity="0.4" />
-            </g>
-            <g transform="translate(55, 320)">
-                <circle cx="0" cy="-8" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
-                <circle cx="6" cy="-2" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
-                <circle cx="4" cy="6" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
-                <circle cx="-4" cy="6" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
-                <circle cx="-6" cy="-2" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
-                <circle cx="0" cy="0" r="2" fill="white" opacity="0.4" />
-            </g>
-            <g transform="translate(55, 400)">
-                <circle cx="0" cy="-8" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
-                <circle cx="6" cy="-2" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
-                <circle cx="4" cy="6" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
-                <circle cx="-4" cy="6" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
-                <circle cx="-6" cy="-2" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
-                <circle cx="0" cy="0" r="2" fill="white" opacity="0.4" />
-            </g>
-        </svg>
+        <!-- 5-Petal Flowers -->
+        <g transform="translate(55, 80)">
+            <circle cx="0" cy="-8" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
+            <circle cx="6" cy="-2" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
+            <circle cx="4" cy="6" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
+            <circle cx="-4" cy="6" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
+            <circle cx="-6" cy="-2" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
+            <circle cx="0" cy="0" r="2" fill="white" opacity="0.4" />
+        </g>
+        <g transform="translate(50, 160)">
+            <circle cx="0" cy="-8" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
+            <circle cx="6" cy="-2" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
+            <circle cx="4" cy="6" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
+            <circle cx="-4" cy="6" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
+            <circle cx="-6" cy="-2" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
+            <circle cx="0" cy="0" r="2" fill="white" opacity="0.4" />
+        </g>
+        <g transform="translate(55, 240)">
+            <circle cx="0" cy="-8" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
+            <circle cx="6" cy="-2" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
+            <circle cx="4" cy="6" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
+            <circle cx="-4" cy="6" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
+            <circle cx="-6" cy="-2" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
+            <circle cx="0" cy="0" r="2" fill="white" opacity="0.4" />
+        </g>
+        <g transform="translate(55, 320)">
+            <circle cx="0" cy="-8" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
+            <circle cx="6" cy="-2" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
+            <circle cx="4" cy="6" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
+            <circle cx="-4" cy="6" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
+            <circle cx="-6" cy="-2" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
+            <circle cx="0" cy="0" r="2" fill="white" opacity="0.4" />
+        </g>
+        <g transform="translate(55, 400)">
+            <circle cx="0" cy="-8" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
+            <circle cx="6" cy="-2" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
+            <circle cx="4" cy="6" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
+            <circle cx="-4" cy="6" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
+            <circle cx="-6" cy="-2" r="4" fill="none" stroke="white" stroke-width="1" opacity="0.6" />
+            <circle cx="0" cy="0" r="2" fill="white" opacity="0.4" />
+        </g>
+    </svg>
     </div>
     <div class="flower-sidebar right">
         <svg class="hanging-vine" viewBox="0 0 120 500" xmlns="http://www.w3.org/2000/svg">
