🌹 Add beautiful rose vine decorations to sidebars with white glow effect

--- a/index.html
+++ b/index.html
@@ -29,44 +29,12 @@
 </head>
 
 <body>
-    <!-- Flower Sidebars -->
+    <!-- Flower Sidebars with Rose Vines -->
     <div class="flower-sidebar left">
-        <svg class="hanging-vine" viewBox="0 0 120 500" xmlns="http://www.w3.org/2000/svg">
-            <!-- Curved vine stem -->
-            <path d="M60,0 Q50,40 55,80 Q60,120 50,160 Q40,200 50,240 Q60,280 55,320 Q50,360 55,400 Q60,440 60,500"
-                stroke="white" stroke-width="2" fill="none" opacity="0.4" />
-
-            <!-- Leaves alternating -->
-            <ellipse cx="40" cy="60" rx="8" ry="14" fill="white" opacity="0.6" transform="rotate(-30 40 60)" />
-            <ellipse cx="70" cy="100" rx="8" ry="14" fill="white" opacity="0.6" transform="rotate(30 70 100)" />
-            <ellipse cx="35" cy="140" rx="8" ry="14" fill="white" opacity="0.6" transform="rotate(-30 35 140)" />
-            <ellipse cx="65" cy="180" rx="8" ry="14" fill="white" opacity="0.6" transform="rotate(30 65 180)" />
-            <ellipse cx="40" cy="220" rx="8" ry="14" fill="white" opacity="0.6" transform="rotate(-30 40 220)" />
-            <ellipse cx="70" cy="260" rx="8" ry="14" fill="white" opacity="0.6" transform="rotate(30 70 260)" />
-            <ellipse cx="35" cy="300" rx="8" ry="14" fill="white" opacity="0.6" transform="rotate(-30 35 300)" />
-            <ellipse cx="65" cy="340" rx="8" ry="14" fill="white" opacity="0.6" transform="rotate(30 65 340)" />
-            <ellipse cx="40" cy="380" rx="8" ry="14" fill="white" opacity="0.6" transform="rotate(-30 40 380)" />
-            <ellipse cx="70" cy="420" rx="8" ry="14" fill="white" opacity="0.6" transform="rotate(30 70 420)" />
-        </svg>
+        <img src="rose-vine.png" alt="Rose Vine" class="rose-vine-img">
     </div>
     <div class="flower-sidebar right">
-        <svg class="hanging-vine" viewBox="0 0 120 500" xmlns="http://www.w3.org/2000/svg">
-            <!-- Curved vine stem (mirrored) -->
-            <path d="M60,0 Q70,40 65,80 Q60,120 70,160 Q80,200 70,240 Q60,280 65,320 Q70,360 65,400 Q60,440 60,500"
-                stroke="white" stroke-width="2" fill="none" opacity="0.4" />
-
-            <!-- Leaves alternating (mirrored) -->
-            <ellipse cx="80" cy="60" rx="8" ry="14" fill="white" opacity="0.6" transform="rotate(30 80 60)" />
-            <ellipse cx="50" cy="100" rx="8" ry="14" fill="white" opacity="0.6" transform="rotate(-30 50 100)" />
-            <ellipse cx="85" cy="140" rx="8" ry="14" fill="white" opacity="0.6" transform="rotate(30 85 140)" />
-            <ellipse cx="55" cy="180" rx="8" ry="14" fill="white" opacity="0.6" transform="rotate(-30 55 180)" />
-            <ellipse cx="80" cy="220" rx="8" ry="14" fill="white" opacity="0.6" transform="rotate(30 80 220)" />
-            <ellipse cx="50" cy="260" rx="8" ry="14" fill="white" opacity="0.6" transform="rotate(-30 50 260)" />
-            <ellipse cx="85" cy="300" rx="8" ry="14" fill="white" opacity="0.6" transform="rotate(30 85 300)" />
-            <ellipse cx="55" cy="340" rx="8" ry="14" fill="white" opacity="0.6" transform="rotate(-30 55 340)" />
-            <ellipse cx="80" cy="380" rx="8" ry="14" fill="white" opacity="0.6" transform="rotate(30 80 380)" />
-            <ellipse cx="50" cy="420" rx="8" ry="14" fill="white" opacity="0.6" transform="rotate(-30 50 420)" />
-        </svg>
+        <img src="rose-vine.png" alt="Rose Vine" class="rose-vine-img rose-vine-right">
     </div>
 
     <!-- Navigation -->
